He respondido a la pregunta 1

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -17,7 +17,9 @@
             <ol>
                 <li>
                     <h3>¿Que es un sistema de control de versiones?</h3>
-                    [Pon tu respuesta]
+                    [Sincroniza las versiones y asegura los cambios no tengan algún
+                    tipo de fallo entre ellos]
+                    
                 </li>
                 <li>
                     <h3>¿Cual es la diferencia entre git y github?</h3>
