--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -23,7 +23,8 @@
                 </li>
                 <li>
                     <h3>¿Cual es la diferencia entre git y github?</h3>
-                    [Pon tu respuesta]
+                    [Git es lo que nos permite realizar,cambiar,hacer/deshacer cambios
+                    en nuestros archivos y Github es la plataforma que utuliza Git]
                 </li>
                 <li>
                     <h3>¿Cómo creo una rama en git?</h3>
