--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -28,7 +28,7 @@
                 </li>
                 <li>
                     <h3>¿Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    [Podemos crear una rama por medio de comandos : git branch [nombre de la rama]]
                 </li>
                 <li>
                     <h3>¿Cómo clono un repositorio?</h3>
