--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -32,7 +32,7 @@
                 </li>
                 <li>
                     <h3>¿Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    [Para crear un repositorio por medio de comandos : mkdir [nombre del repositorio]]
                 </li>
                 <li>
                     <h3>¿Cómo puedo bajar los ultimos cambios de un repositorio?</h3>
