He respondido a la pregunta 4

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -36,7 +36,8 @@
                 </li>
                 <li>
                     <h3>¿Cómo puedo bajar los ultimos cambios de un repositorio?</h3>
-                    [Pon tu respuesta]
+                    [Mediante el comando git pull, a direfencia de git push que este sube los cambios 
+                    realizados, git pull nos permite traer los datos que necesitemos a nuestro archivo]
                 </li>
                 <li>
                     <h3>¿Cómo puedo gener un tag?</h3>
