--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -41,7 +41,7 @@
                 </li>
                 <li>
                     <h3>¿Cómo puedo gener un tag?</h3>
-                    [Pon tu respuesta]
+                    [Para crear un tag por medio de comandos : git tag [nombre del tag]]
                 </li>
                 <li>
                     <h3>Cómo hago una mezcla de ramas?</h3>
