He respondido a la pregunta 6

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -45,7 +45,9 @@
                 </li>
                 <li>
                     <h3>Cómo hago una mezcla de ramas?</h3>
-                    [Pon tu respuesta]
+                    [Si nos encontramos en la rama "Señal" y queremos fusionarla con la rama 
+                    "Pared" por medio de comandos : git merge Pared 
+                    esto nos fusionara la rama en la que nos encontramos con la rama descrita]
                 </li>
                 <li>
                     <h3>¿Cómo puedo moverme a un commit especifico?</h3>
