He respondido a la pregunta 7

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -51,7 +51,7 @@
                 </li>
                 <li>
                     <h3>¿Cómo puedo moverme a un commit especifico?</h3>
-                    [Pon tu respuesta]
+                    [Poara movernos a un commit específico por medio de comandos : git checkout [hash del commit]]
                 </li>
                 <li>
                     <h3>¿Cómo puedo borrar una rama?</h3>
