He respondido a la pregunta 8

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                     <h3>¿Cómo puedo borrar un tag?</h3>
-                    [Pon tu respuesta]
+                    [Poara borrar el tag por medio de comandos : git tag -d [nombre del tag]]
                 </li>
                 <li>
                     <h3>¿Cómo puedo ver los cambios que estan por enviarse al repositorio?</h3>
