--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -63,7 +63,7 @@
                 </li>
                 <li>
                     <h3>¿Cómo puedo ver los cambios que estan por enviarse al repositorio?</h3>
-                    [Pon tu respuesta]
+                    [Para ver los cambios que están por enviarse al repositorio : git status]
                 </li>
                 <li>
                     <h3>¿Para que sirve el comando <em>git remote -v?</em></h3>
