He respondido a la pregunta 11

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -67,7 +67,7 @@
                 </li>
                 <li>
                     <h3>¿Para que sirve el comando <em>git remote -v?</em></h3>
-                    [Pon tu respuesta]
+                    [Para ver repositorios remotos asociados a mi repositorio local]
                 </li>
                 <li>
                     <h3>¿Cómo le digo a git cual es mi email y correo?</h3>
