--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -71,7 +71,9 @@
                 </li>
                 <li>
                     <h3>¿Cómo le digo a git cual es mi email y correo?</h3>
-                    [Pon tu respuesta]
+                    [Para hacerlo por medio de comandos : 
+                        - Para tu nomnbre : git config user.name "nombre"
+                        - Para correo : git config user.email "tu correo"]
                 </li>
                 <li>
                     <h3>¿Cuales son los pasos para conectar git con github?</h3>
