He respondido a la pregunta 13

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -77,7 +77,10 @@
                 </li>
                 <li>
                     <h3>¿Cuales son los pasos para conectar git con github?</h3>
-                    [Pon tu respuesta]
+                    [Para esto primero debemos de poner nuestro nombre y nuestro correo,
+                    tras esto iniciaremos sesión en git y crearemos nuestro repositorio, el cual será vinculado
+                    y tras esto ya podemos trabajar con él (recordar que utilizamos git push para subir los 
+                    cambios y git pull para traer datos si nos son necesarios)]
                 </li>
                 <li>
                     <h3>¿Cómo puedo crear un alias en git?</h3>
