He contestado la última pregunta y acabado la actividad

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -84,7 +84,8 @@
                 </li>
                 <li>
                     <h3>¿Cómo puedo crear un alias en git?</h3>
-                    [Pon tu respuesta]
+                    [Para hacerlo por medio de comandos : git config -- global alias.st "status" 
+                    con este ejemplo en vez de utilizar git status podemos poner de forma más rápida git st]
                 </li>
             </ol>
         </div>
