prueba de enlace

--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -27,7 +27,7 @@
                     en nuestros archivos y Github es la plataforma que utuliza Git]
                 </li>
                 <li>
-                    <h3>¿Cómo creo una rama en git?</h3>
+                    <h3>¿Cómooo creo una rama en git?</h3>
                     [Podemos crear una rama por medio de comandos : git branch [nombre de la rama]]
                 </li>
                 <li>
